SUBDIRS =					\
	edict					\
	eijiro					\
	gene95					\
	jmdict

nobase_dist_examples_dictionary_DATA =		\
	readme.txt				\
	init_db.sh				\
	$(html_files)

# find html -type f | sort | sed -e 's,^./,\t,g'
html_files =					\
	html/css/dictionary.css			\
	html/index.html				\
	html/js/dictionary.js			\
	html/js/jquery-1.4.2.min.js
