SUBDIRS =					\
	edict					\
	eijiro					\
	gene95					\
	jmdict

dist_examples_dictionary_SCRIPTS =		\
	init_db.sh

nobase_dist_examples_dictionary_DATA =		\
	readme.txt				\
	$(html_files)

# find html -type f | sort | sed -e 's,^./,\t,g'
html_files =					\
	html/css/dictionary.css			\
	html/index.html				\
	html/js/dictionary.js			\
	html/js/jquery-1.4.2.min.js
