groonga_includedir = $(pkgincludedir)/groonga
groonga_include_HEADERS =			\
	array.h					\
	command.h				\
	config.h				\
	dat.h					\
	dump.h					\
	expr.h					\
	file_reader.h				\
	hash.h					\
	geo.h					\
	groonga.h				\
	ii.h					\
	obj.h					\
	output.h				\
	pat.h					\
	plugin.h				\
	portability.h				\
	request_canceler.h			\
	request_timer.h				\
	scorer.h				\
	thread.h				\
	time.h					\
	token.h					\
	tokenizer.h				\
	token_filter.h				\
	type.h					\
	nfkc.h					\
	normalizer.h				\
	util.h					\
	windows.h				\
	windows_event_logger.h
