groonga_includedir = $(pkgincludedir)/groonga
groonga_include_HEADERS =			\
	accessor.h				\
	array.h					\
	arrow.h					\
	arrow.hpp				\
	cache.h					\
	column.h				\
	command.h				\
	config.h				\
	dat.h					\
	db.h					\
	dump.h					\
	error.h					\
	expr.h					\
	file_reader.h				\
	hash.h					\
	highlighter.h				\
	geo.h					\
	groonga.h				\
	id.h					\
	ii.h					\
	index_column.h				\
	memory.h				\
	msgpack.h				\
	obj.h					\
	operator.h				\
	option.h				\
	output.h				\
	output_columns.h			\
	pat.h					\
	plugin.h				\
	portability.h				\
	posting.h				\
	raw_string.h				\
	request_canceler.h			\
	request_timer.h				\
	scorer.h				\
	string.h				\
	table.h					\
	thread.h				\
	time.h					\
	token.h					\
	token_cursor.h				\
	token_filter.h				\
	token_metadata.h			\
	tokenizer.h				\
	tokenizer_query_deprecated.h		\
	type.h					\
	nfkc.h					\
	normalizer.h				\
	util.h					\
	window_function.h			\
	window_function_executor.h		\
	windows.h				\
	windows_event_logger.h			\
	vector.h

nodist_groonga_include_HEADERS =		\
	version.h
