groonga_includedir = $(pkgincludedir)/groonga
groonga_include_HEADERS =			\
	accessor.h				\
	aggregator.h				\
	array.h					\
	arrow.h					\
	arrow.hpp				\
	bulk.hpp				\
	cache.h					\
	cast.h					\
	column.h				\
	command.h				\
	command_arguments.hpp			\
	config.h				\
	dat.h					\
	db.h					\
	dump.h					\
	error.h					\
	expr.h					\
	file_reader.h				\
	hash.h					\
	highlighter.h				\
	geo.h					\
	groonga.h				\
	id.h					\
	ii.h					\
	index_column.h				\
	memory.h				\
	msgpack.h				\
	obj.h					\
	operator.h				\
	option.h				\
	output.h				\
	output_columns.h			\
	pat.h					\
	plugin.h				\
	portability.h				\
	posting.h				\
	proc.h					\
	progress.h				\
	raw_string.h				\
	request_canceler.h			\
	request_timer.h				\
	result_set.h				\
	selector.h				\
	scorer.h				\
	smart_obj.hpp				\
	string.h				\
	table.h					\
	table_module.h				\
	thread.h				\
	time.h					\
	token.h					\
	token_cursor.h				\
	token_filter.h				\
	token_metadata.h			\
	tokenizer.h				\
	tokenizer_query_deprecated.h		\
	type.h					\
	nfkc.h					\
	normalizer.h				\
	util.h					\
	window_function.h			\
	window_function_executor.h		\
	windows.h				\
	windows_event_logger.h			\
	vector.h				\
	wal.h

nodist_groonga_include_HEADERS =		\
	build_option.h				\
	version.h

EXTRA_DIST =					\
	build_option_cmake.h.in
